--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,28 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.login-container{
+  background-color: blueviolet;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.list{
+  border-radius: 20px;
+}
+.list:hover{
+  cursor: pointer;
+  background-color: blueviolet !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-img{
+  height: 50px;
+  width: 50px;
+}
+
+.edit-icon{
+  width: 30px;
+}
+
+.delete-icon{
+  width: 30px;
 }
